--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-presidio_analyzer 
-presidio_anonymizer
-spacy
-spacy-streamlit
+presidio_analyzer==2.2.341
+presidio_anonymizer==2.2.341
+spacy==3.7.2
+spacy-streamlit==1.0.6
 https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.0/en_core_web_lg-3.7.0-py3-none-any.whl
